master: the current package page is loading the songs, the song component is shared now.

--- a/src/app/pages/package/current-package/current-package.component.scss
+++ b/src/app/pages/package/current-package/current-package.component.scss
@@ -1,5 +1,12 @@
 @import '../../create/create.styles.scss';
+@import '../../../shared/sass/variables';
 
 :host {
   @include center-form;
+  .package {
+    margin: 10px;
+    overflow: auto;
+    background-color: $lightGray;
+    border-radius: 10px;
+  }
 }
