--- a/src/app/pages/package/current-package/current-package.component.html
+++ b/src/app/pages/package/current-package/current-package.component.html
@@ -2,7 +2,12 @@
   <h2>Your package</h2>
   <p>You’ve added the following songs</p>
   <div class="package">
-    
+    <song *ngFor="let song of pkg"
+      [data]="parseData(song)"
+      [packagedID]="parseHash(song)"
+      (onDelete)="deleteHandler($event)"
+      style="margin: 10px">
+    </song>
   </div>
   <a href="">How does the songs package work?</a>
 </div>
