master: i'll make the slide message mobile-friendly.

--- a/src/app/pages/package/current-package/current-package.component.html
+++ b/src/app/pages/package/current-package/current-package.component.html
@@ -16,3 +16,7 @@
   </ng-template>
 </div>
 <a href="">How does the songs package work?</a>
+<slide-message
+  [show]="deleting"
+  message="Succesfully removed song!">
+</slide-message>
