master: the slide message is ready for the current package page.

--- a/src/app/pages/package/current-package/current-package.component.html
+++ b/src/app/pages/package/current-package/current-package.component.html
@@ -17,6 +17,8 @@
 </div>
 <a href="">How does the songs package work?</a>
 <slide-message
-  [show]="deleting"
+  [danger]="true"
+  class="rm-message"
+  [display]="deleting"
   message="Succesfully removed song!">
 </slide-message>
