--- a/src/app/pages/create/create.styles.scss
+++ b/src/app/pages/create/create.styles.scss
@@ -7,10 +7,12 @@
 }
 
 @mixin center-form {
-  position: absolute;
-  top: 50%; left: 50%;
-  width: 100%; max-width: 450px;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 450px;
+  height: calc(100vh - 50px);
+  margin: auto;
 }
 
 .presentation {
