--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,4 +46,4 @@
 <i class="scroll-top-btn uil uil-angle-double-up"
   [ngClass]="{ 'show-btn': showSTbutton }"
   (click)="toTop()"></i>
-<slide-message [show]="added" [message]="slideMessage"></slide-message>
+<slide-message [display]="added" [message]="slideMessage"></slide-message>
