--- a/src/app/shared/components/slide-message/slide-message.component.html
+++ b/src/app/shared/components/slide-message/slide-message.component.html
@@ -1,4 +1,4 @@
-<div class="slide-message" [ngStyle]="{ 'top': show ? '10px' : '-55px' }">
+<div class="slide-message" [ngClass]="{ 'display': display, 'danger-mode': danger }">
   <p>{{ message }}</p>
   <i class="uil uil-check-circle"></i>
 </div>
