--- a/src/app/shared/components/slide-message/slide-message.component.scss
+++ b/src/app/shared/components/slide-message/slide-message.component.scss
@@ -1,9 +1,11 @@
 @import '../../sass/variables';
 .slide-message {
-  position: fixed; right: 50%;
+  position: fixed; 
+  bottom: -55px; right: 50%;
   display: flex;
   align-items: center;
-  max-width: 300px;
+  justify-content: center;
+  width: 70%; max-width: 250px;
   transform: translateX(50%);
   text-align: center;
   border-radius: 10px;
@@ -13,4 +15,6 @@
   color: white;
   transition-duration: .25s;
   i { font-size: 1.4em; margin-left: 7px }
+  &.display { bottom: 10px }
+  &.danger-mode { background-color: $passionRed }
 }
