master: following with the things.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="query-interaction">
     <div class="search-input">
-      <span class="iconify" data-icon="bx:bx-search-alt"></span>
+      <filter></filter>
       <input
         type="text"
         placeholder="What song are you searching?"
