--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,6 +23,19 @@
         outline: none;
         @media (min-width: 768px) { font-size: 15px }
       }
+      .filter {
+        position: absolute; height: 100%;        
+        display: flex; align-items: center;
+        height: calc(100% - 14px);
+        margin-left: 7px;
+        padding: 7px;
+        img { height: min(60%, 20px) }
+        i {
+          font-size: 1.1em;
+          margin-left: 3px;
+          transition-duration: .25s;
+        }
+      }
     }
     .results {
       overflow: auto;
