master: i'll make some things in the back.

--- a/src/app/pages/package/current-package/current-package.component.html
+++ b/src/app/pages/package/current-package/current-package.component.html
@@ -15,6 +15,11 @@
     <p>Empty package</p>
   </ng-template>
 </div>
+<action-button
+  style="width: calc(100% - 20px); margin: 0 auto 10px auto;"
+  [includeIcon]="false"
+  label="Download">
+</action-button>
 <a href="">How does the songs package work?</a>
 <slide-message
   [danger]="true"
