--- a/src/app/shared/components/action-button/action-button.component.html
+++ b/src/app/shared/components/action-button/action-button.component.html
@@ -1,4 +1,4 @@
 <button class="action-btn" [ngClass]="{'go-back': goback}" >
-  <p *ngIf="!goback">Continue</p>
-  <img src="../../../../assets/icons/arrow.svg" alt="">
+  <p *ngIf="!goback">{{ label || 'Continue' }}</p>
+  <img src="../../../../assets/icons/arrow.svg" alt="" *ngIf="includeIcon">
 </button>
