master: ready to start with the help page.

--- a/src/app/pages/create/main-form/main-form.component.html
+++ b/src/app/pages/create/main-form/main-form.component.html
@@ -9,7 +9,7 @@
   <custom-input placeholder="Album"></custom-input>
   <custom-input placeholder="Genre"></custom-input>
 </div>
-<div class="btns-group">
+<div class="btns-group" style="width: calc(100% - 2em); margin: 0 auto">
   <action-button [goback]="true"></action-button>
   <action-button></action-button>
 </div>
