--- a/src/app/pages/info-center/question/question.component.html
+++ b/src/app/pages/info-center/question/question.component.html
@@ -1,8 +1,5 @@
 <div class="question-wrapper">
-  <div class="title">
-    <h3>{{ title }}</h3>
-    <i class="uil uil-angle-down"></i>
-  </div>
+  <h3 class="title">{{ title }}</h3>
   <p class="answer">
     <ng-content></ng-content>
   </p>
