master: i just added some responsive to the information center, i need to get styled the questions.

--- a/src/app/pages/info-center/info-center.component.html
+++ b/src/app/pages/info-center/info-center.component.html
@@ -1,20 +1,22 @@
 <div class="info-center">
-  <div class="presentation">
-    <h1>Lasso</h1>
-  <p>Information center</p>
+  <div class="header">
+    <div class="presentation">
+      <h1>Lasso</h1>
+      <p>Information center</p>
+    </div>
+    <div class="hero">
+      <figure>
+        <img src="assets/ilustrations/faq.svg" alt=""/>
+      </figure>
+      <h3>
+        Here you can find information about Lasso, how does it work
+        and other useful things for the correct use of this page.
+      </h3>
+    </div>
   </div>
-  <div class="hero">
-    <figure>
-      <img src="assets/ilustrations/faq.svg" alt=""/>
-    </figure>
-    <h3>
-      Here you can find information about Lasso, how does it work
-      and other useful things for the correct use of this page.
-    </h3>
-  </div>
-  <div>
+  <div class="questions">
     <h2 style="text-align: center">Frequent questions</h2>
-    <div class="questions">
+    <div class="questions-list">
       <question title="What is Lasso?">
         Lasso is a complete music downloader that use
         JSON-based packages to download any song you want
