--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -20,9 +20,9 @@
     <i class="uil uil-box"></i>
     <p>Current package</p>
   </a>
-  <a routerLink="/help"
+  <a routerLink="/information"
     routerLinkActive="active" (click)="open = false">
     <i class="uil uil-comment-info"></i>
-    <p>Help</p>
+    <p>Information center</p>
   </a>
 </div>
