--- a/src/app/pages/info-center/info-center.component.scss
+++ b/src/app/pages/info-center/info-center.component.scss
@@ -1,22 +1,37 @@
 @import '../../shared/sass/variables';
 
 .info-center {
-  .presentation {
-    text-align: center;
-    font-size: 1.3em;
-    p { font-weight: bold; color: $darkGray }
-  }
-  .hero {
-    margin: 10px 0; padding: 0 2em;
-    max-width: 375px;
-    figure img { width: 100% }
-    h3 {
-      font-size: min(5vw, 20px);
-      margin-top: 15px;
-      color: $darkGray;
+  .header {
+    .presentation {
+      text-align: center;
+      font-size: 1.3em;
+      p { font-weight: bold; color: $darkGray }
+    }
+    .hero {
+      margin: 10px 0; padding: 0 2em;
+      figure img { width: 100% }
+      h3 {
+        font-size: min(5vw, 20px);
+        margin-top: 15px;
+        color: $darkGray;
+      }
     }
   }
-  .questions {
-    max-width: 450px;
+  @media (min-width: 768px) {
+    .header {
+      position: fixed; top: 0;
+      width: 50%; height: 100vh;
+      display: flex; flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: white;
+      border-right: 5px solid $lightBlue;
+      max-width: 350px;
+      text-align: center;
+    }
+    .questions {
+      width: calc(100% - min(50%, 350px));
+      margin-left: auto;
+    }
   }
 }
