--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -28,7 +28,7 @@
       &::after { width: 67%; right: 0 }
     }
     &.opened {
-      margin: 20px 0 0 min(100%, 240px);
+      margin: 20px 0 0 min(100%, 290px);
       #l1 { opacity: 0 }
       #l2 { transform: rotate(-45deg) }
       #l3 {
@@ -46,7 +46,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%; height: 100vh ;
-    max-width: 300px;
+    max-width: 350px;
     background-color: white;
     border-right: 5px solid #3d84b8;
     transform: translateX(calc(-100% + 5px));
@@ -54,7 +54,7 @@
     a {
       display: flex;
       align-items: center;
-      width: 75%;
+      width: 75%; max-width: 225px;
       font-size: 1.4em;
       padding: 0.65em;
       background-color: $lightGray;
@@ -68,6 +68,7 @@
         background-color: $lightBlue;
         color: white;
       }
+      &:hover { color: $lightBlue }
     }
   }
 }
