master: i think the information center page base is done.

--- a/src/app/pages/info-center/info-center.component.html
+++ b/src/app/pages/info-center/info-center.component.html
@@ -18,29 +18,30 @@
     <h2 style="text-align: center">Frequent questions</h2>
     <div class="questions-list">
       <question title="What is Lasso?">
-        Lasso is a complete music downloader that use
+        Lasso is a <strong>complete music downloader</strong> that use
         JSON-based packages to download any song you want
-        through our desktop app.
+        through our <a href="">desktop app.</a>
       </question>
       <question title="How does it work?">
         As a user, i add to the current package the song that i want to download,
-        then i go to the package section and download it. I open the Desktop app
-        to open the downloaded JSON and click on download button.
+        then i go to the package section and download it. I open the desktop app
+        to open the <strong>downloaded JSON</strong> and click on download button.
         It's all, your songs will start to be downloaded.
       </question>
       <question title="Is it completely free?">
         Yes, the fetched data for Lasso is brought from the most
-        used music stream platforms (Spotify, Deezer) and the audio from Youtube.
+        used music stream platforms (<a href="">Spotify</a> and <a href="">Deezer</a>)
+        and the audio from <a href="">Youtube</a>.
       </question>
       <question title="Who developed Lasso?">
-        Gian López, a Web Developer that learned Angular
+        <a href="">Gian López</a>, a Web Developer that learned Angular
         some weeks ago and made it to practice.
       </question>
       <question title="Can i contribute?">
-        Yes, you can contribute, just send me an email.
+        Yes, you can contribute, just <a href="">send me an email.</a>
       </question>
       <question title="Can i donate?">
-        Yes, you can donate too, here.
+        Yes, you can donate too, <a href="">here.</a>
       </question>
     </div>
   </div>
