--- a/src/app/pages/info-center/question/question.component.scss
+++ b/src/app/pages/info-center/question/question.component.scss
@@ -1,6 +1,29 @@
+@import '../../../shared/sass/variables';
+
 .question-wrapper {
-  padding: 5px 15px;
+  margin: 15px; padding: 10px 15px;
+  border-radius: 7px;
+  box-shadow: 0px 0px 5px 2px #0000001a;
+  user-select: none;
+  cursor: pointer;
+  max-width: 450px;
+  .title { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    i { font-size: 1.25em; transition-duration: .2s }
+  }
   .answer {
-    // font-style: italic;
+    border-left: 3px solid $lightBlue;    
+    transition-duration: .3s;
+    background-color: $lightGray;
+    border-radius: 0 5px 5px 0;
+    max-height: 0;
+    overflow: hidden;
+    &.show {
+      max-height: 150px;
+      margin: 5px 0;
+      padding: 10px 5px;
+    }
   }
 }
