--- a/src/app/pages/info-center/info-center.component.html
+++ b/src/app/pages/info-center/info-center.component.html
@@ -19,7 +19,7 @@
     <div class="questions-list">
       <question title="What is Lasso?">
         Lasso is a <strong>complete music downloader</strong> that use
-        JSON-based packages to download any song you want
+        JSON-based packages generated here in the page and downloaded
         through our <a href="">desktop app.</a>
       </question>
       <question title="How does it work?">
@@ -29,19 +29,30 @@
         It's all, your songs will start to be downloaded.
       </question>
       <question title="Is it completely free?">
-        Yes, the fetched data for Lasso is brought from the most
-        used music stream platforms (<a href="">Spotify</a> and <a href="">Deezer</a>)
-        and the audio from <a href="">Youtube</a>.
+        Yes, the fetched data for Lasso is brought from the most used music stream platforms
+        (<a href="https://www.spotify.com" rel="noopener noreferrer" target="_blank">Spotify</a> and
+        <a href="https://www.deezer.com" rel="noopener noreferrer" target="_blank">Deezer</a>)
+        and the audio from
+        <a href="https://www.youtube.com" rel="noopener noreferrer" target="_blank">Youtube</a>.
       </question>
       <question title="Who developed Lasso?">
-        <a href="">Gian López</a>, a Web Developer that learned Angular
-        some weeks ago and made it to practice.
+        <a href="https://gianlop3z-dev.web.app" rel="noopener noreferrer" target="_blank">Gian López</a>, 
+        a Web Developer that learned Angular some weeks ago and made it to practice.
       </question>
       <question title="Can i contribute?">
-        Yes, you can contribute, just <a href="">send me an email.</a>
+        Yes, you can contribute, just <a href="mailto:lopezarizagianlucas@gmail.com">send me an email.</a>
       </question>
       <question title="Can i donate?">
-        Yes, you can donate too, <a href="">here.</a>
+        Yes, you can donate too,
+        <a href="https://www.buymeacoffee.com/gianlop3z" rel="noopener noreferrer" target="_blank">here.</a>
+      </question>
+      <question title="Does Lasso download at +128 kbps?">
+        No, the audio is brought from Youtube, so the max kpbs is 128. 
+      </question>
+      <question title="What's the name origin?">
+        "Lasso" came from
+        <a href="https://es.wikipedia.org/wiki/Orlando_di_Lasso" rel="noopener noreferrer" target="_blank">
+          Orlando's</a> name.
       </question>
     </div>
   </div>
