master: some responsive mode was added, i think i need more fq.

--- a/src/app/pages/info-center/info-center.component.html
+++ b/src/app/pages/info-center/info-center.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="questions">
-    <h2 style="text-align: center">Frequent questions</h2>
+    <h2 style="text-align: center; padding: .7em 0">Frequent questions</h2>
     <div class="questions-list">
       <question title="What is Lasso?">
         Lasso is a <strong>complete music downloader</strong> that use
