--- a/src/app/pages/info-center/info-center.component.scss
+++ b/src/app/pages/info-center/info-center.component.scss
@@ -18,6 +18,10 @@
       }
     }
   }
+  .questions .questions-list {
+    display: flex; flex-wrap: wrap;
+    justify-content: center;
+  }
   @media (min-width: 768px) {
     .header {
       position: fixed; top: 0;
