--- a/src/app/pages/info-center/question/question.component.scss
+++ b/src/app/pages/info-center/question/question.component.scss
@@ -1,12 +1,13 @@
 @import '../../../shared/sass/variables';
 
+:host { width: 100%; max-width: 550px }
 .question-wrapper {
-  margin: 15px; padding: 10px 15px;
+  width: calc(100% - 60px);
+  margin: 10px auto; padding: 10px 15px;
   border-radius: 7px;
   box-shadow: 0px 0px 5px 2px #0000001a;
   user-select: none;
-  cursor: pointer;
-  max-width: 450px;
+  cursor: pointer;  
   .title { 
     display: flex;
     justify-content: space-between;
