--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   #burger-menu {
-    position: relative; z-index: 2;
+    position: fixed; z-index: 2;
     width: 45px; height: 30px;
     margin: 20px 0 0 15px;
     transition-duration: .3s;
@@ -68,7 +68,7 @@
         background-color: $lightBlue;
         color: white;
       }
-      &:hover { color: $lightBlue }
+      &:not(.active):hover { color: $lightBlue }
     }
   }
 }
