master: i just added the download center module as a page.

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -23,6 +23,11 @@
   <a routerLink="/information"
     routerLinkActive="active" (click)="open = false">
     <i class="uil uil-comment-info"></i>
-    <p>Information center</p>
+    <p>Information</p>
+  </a>
+  <a routerLink="/download"
+    routerLinkActive="active" (click)="open = false">
+    <i class="uil uil-file-download-alt"></i>
+    <p>Download</p>
   </a>
 </div>
