--- a/src/app/pages/centers/information/question/question.component.scss
+++ b/src/app/pages/centers/information/question/question.component.scss
@@ -1,4 +1,4 @@
-@import '../../../shared/sass/variables';
+@import '../../../../shared/sass/variables';
 
 :host { width: 100%; max-width: 550px }
 .question-wrapper {
