--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,11 @@ a {
   text-align: center;
 }
 
+.presentation {
+  text-align: center;
+  p { color: $darkGray }
+}
+
 .waves-lottie {
   > div {  
     position: fixed; z-index: -1;
