--- a/src/app/pages/create/cover/cover.component.scss
+++ b/src/app/pages/create/cover/cover.component.scss
@@ -10,7 +10,7 @@
     height: 50vh;
     background-color: $lightGray;
     border-radius: 5px;
-    margin: 15px auto 10px auto;
+    margin: 10px 0;
     p {
       font-size: 1.35em;
       font-weight: bold;
