--- a/src/app/pages/package/current-package/current-package.component.scss
+++ b/src/app/pages/package/current-package/current-package.component.scss
@@ -1,12 +1,20 @@
 @import '../../../shared/sass/variables';
-@import '../../create/create.styles.scss';
+@import '../../../shared/sass/utils';
 
-:host {
+.current-package {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 55px 10px;
+  height: calc(100vh - (55px * 2));
+  max-width: 650px;
+  margin: auto;
   .package {
     margin: 10px;
     overflow: auto;
     background-color: $lightGray;
-    border-radius: 10px;    
+    border-radius: 7px;
+    @include custom-scrollbar;
   }
   .empty {
     display: flex;
@@ -16,5 +24,7 @@
     height: 250px;
     p { margin-bottom: 7px; color: $darkGray }    
   }
-  @media (min-width: 500px) { @include center-page }
+  @media (min-width: 500px) {
+    
+  }
 }
