--- a/src/app/shared/components/action-button/action-button.component.scss
+++ b/src/app/shared/components/action-button/action-button.component.scss
@@ -17,7 +17,7 @@
   }
   img { width: 13px }
   &.go-back {
-    background-color: $passionRed;
+    background-color: $babyRed;
     img { transform: rotate(180deg) }
   }
 }
