--- a/src/app/shared/components/slide-message/slide-message.component.scss
+++ b/src/app/shared/components/slide-message/slide-message.component.scss
@@ -16,5 +16,5 @@
   transition-duration: .25s;
   i { font-size: 1.4em; margin-left: 7px }
   &.display { bottom: 10px }
-  &.danger-mode { background-color: $passionRed }
+  &.danger-mode { background-color: $babyRed }
 }
