--- a/src/app/shared/components/song/song.component.scss
+++ b/src/app/shared/components/song/song.component.scss
@@ -45,7 +45,7 @@
       }
       .del-action {
         cursor: pointer;
-        &:hover { color: $passionRed }
+        &:hover { color: $babyRed }
       }
     }
   }
