--- a/src/app/pages/create/create.styles.scss
+++ b/src/app/pages/create/create.styles.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 450px;
-  height: calc(100vh - 50px);
+  height: 100vh;
   margin: auto;
 }
 
