--- a/src/app/shared/sass/_variables.scss
+++ b/src/app/shared/sass/_variables.scss
@@ -4,6 +4,6 @@ $lightGray: #E5E5E5;
 $midGray: #C4C4C4;
 $darkGray: #929292;
 $babyGreen: #46C789;
-$passionRed: #FF4052;
+$babyRed: #FF4052;
 
 $radiusBase: 10px;
