master: the clear package button is functional.

--- a/src/app/pages/centers/information/information.component.scss
+++ b/src/app/pages/centers/information/information.component.scss
@@ -12,6 +12,7 @@
     .hero {
       margin: 10px auto; padding: 0 2em;
       max-width: 350px;
+      text-align: center;
       figure img { width: 100% }
       h3 {
         font-size: min(5vw, 20px);
