--- a/src/app/pages/package/package.component.html
+++ b/src/app/pages/package/package.component.html
@@ -17,7 +17,7 @@
     </ng-template>
   </div>
   <div class="btns-group">
-    <button class="delete-all">
+    <button class="delete-all" (click)="clearPackage()">
       Delete all
       <i class="uil uil-trash-alt"></i>
     </button>
