--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -28,7 +28,7 @@
       &::after { width: 67%; right: 0 }
     }
     &.opened {
-      margin: 20px 0 0 min(100%, 290px);
+      margin: 20px 0 0 min(calc(100% - 55px), 295px);
       #l1 { opacity: 0 }
       #l2 { transform: rotate(-45deg) }
       #l3 {
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%; height: 100vh ;
+    width: calc(100% - 5px); height: 100vh ;
     max-width: 350px;
     background-color: white;
     border-right: 5px solid #3d84b8;
