master: the create song inputs form, got a new animation.

--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,5 +1,13 @@
 <div class="custom-input">
-  <input type="text" [name]="name" [formControl]="formControl">
-  <label [for]="name">{{ placeholder }}</label>
+  <input
+    type="text"
+    [name]="name"
+    autocomplete="off"
+    [ngClass]="{ 'valid': control?.value.length > 0 }"
+    [formControl]="formControl"
+  />
+  <label [for]="name">
+    {{ placeholder }}
+  </label>
   <p class="info" *ngIf="false">?</p>
 </div>
