--- a/src/app/shared/components/action-button/action-button.component.scss
+++ b/src/app/shared/components/action-button/action-button.component.scss
@@ -1,7 +1,7 @@
 @import '../../sass/variables';
 
 .action-btn {
-  width: 100%; height: 40px;
+  width: 100%; height: 45px;
   display: flex;
   padding: 13.5px;
   border: none;
@@ -10,6 +10,7 @@
   color: white;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   p {
     margin-right: 7px;
     font-weight: bold;
