master: i'm adding the links of the song component.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
         placeholder="What song are you searching?"
         spellcheck="false"
         [(ngModel)]="song"
-        (input)="onSongChange()"
+        (keyup)="onSongChange()"
       />
     </div>
     <div class="results" (window:scroll)="onScroll()"
