--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 @import '../../shared/sass/variables';
 
-.home-page {  
+.home-page {
+  padding: 60px 0;
   .presentation {
     text-align: center;
     font-size: 1.3em;
