--- a/src/app/shared/components/song/song.component.scss
+++ b/src/app/shared/components/song/song.component.scss
@@ -37,11 +37,13 @@
     .actions {
       margin: 0 min(4%, 15px) 0 5px;
       display: flex; // for long tags overflow
-      img {
+      a { display: flex }
+      img, a img {
         width: min(6vw, 25px);        
         margin-right: 7px;
         cursor: pointer;
         &.download { width: min(5vw, 20px) }
+        &.youtube { width: min(5vw, 27px) }
       }
       .del-action {
         cursor: pointer;
