--- a/src/app/pages/create/cover/cover.component.scss
+++ b/src/app/pages/create/cover/cover.component.scss
@@ -1,7 +1,8 @@
 @import '../../../shared/sass/variables';
 @import '../create.styles.scss';
 
-:host { width: 90%;
+:host {
+  width: 90%;
   @include center-page;
   .cover-place {
     display: flex;
@@ -22,7 +23,7 @@
     display: flex;
     input, button { border: none; border-radius: 3px }
     input {
-      flex: 1; padding: 1em 0 1em 1em;
+      flex: 1; padding: 1em calc(25% + 10px) 1em 1em;
       background-color: $lightGray;
       font-size: .9em;
       outline: none;
@@ -30,7 +31,7 @@
     button {
       position: absolute;
       bottom: 50%; right: 5px;
-      height: 80%;
+      width: 25%; height: 80%;
       transform: translateY(50%);
       padding: 0 2em;
       background-color: $darkGray;
