--- a/src/app/pages/create/cover/cover.component.scss
+++ b/src/app/pages/create/cover/cover.component.scss
@@ -17,6 +17,14 @@
       font-weight: bold;
       color: $darkGray
     }
+    .loaded-cover {
+      width: calc(100% - 20px);
+      height: calc(100% - 20px);
+      object-fit: cover;
+      border-radius: inherit;
+      transition-duration: .25s;
+      &:hover { width: 100%; height: 100% }
+    }
   }
   .cover-input {
     position: relative;
